[gd_scene load_steps=34 format=3 uid="uid://cgmo7hdyxtr1t"]

[ext_resource type="Script" path="res://Entities/Player/Player.gd" id="1_3kkn8"]
[ext_resource type="Texture2D" uid="uid://bn0puhjet4h3v" path="res://Entities/Player/Small Mario.png" id="1_l2c62"]
[ext_resource type="PackedScene" uid="uid://ig4hs74eulny" path="res://Entities/character_state_machine.tscn" id="3_gp3jq"]
[ext_resource type="Script" path="res://Entities/Player/GroundState.gd" id="4_niits"]
[ext_resource type="Script" path="res://Entities/Player/AirState.gd" id="5_a5tc0"]
[ext_resource type="PackedScene" uid="uid://d014ofq0uti3s" path="res://Entities/hitbox_component.tscn" id="7_kkc7s"]
[ext_resource type="Script" path="res://Entities/Player/StateDebug.gd" id="7_nb2wc"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6blm8"]
size = Vector2(16, 16)

[sub_resource type="Animation" id="Animation_alwvl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallMario:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SmallMario:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmallMario:texture")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_l2c62")]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SmallMario:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_f1xuq"]
resource_name = "climb"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallMario:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_l2c62")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SmallMario:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmallMario:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [7, 8]
}

[sub_resource type="Animation" id="Animation_j3p8q"]
resource_name = "dead"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallMario:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_l2c62")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SmallMario:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmallMario:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [6]
}

[sub_resource type="Animation" id="Animation_skqtu"]
resource_name = "double_jump"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallMario:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_l2c62")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SmallMario:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmallMario:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("SmallMario:rotation")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 6.28319]
}

[sub_resource type="Animation" id="Animation_6mg81"]
resource_name = "idle"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallMario:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_l2c62")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SmallMario:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmallMario:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_uomvh"]
resource_name = "jump"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallMario:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_l2c62")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SmallMario:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmallMario:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [5]
}

[sub_resource type="Animation" id="Animation_xh1se"]
resource_name = "skid"
length = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallMario:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_l2c62")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SmallMario:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmallMario:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}

[sub_resource type="Animation" id="Animation_u0xjn"]
resource_name = "swim"
length = 0.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallMario:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_l2c62")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SmallMario:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmallMario:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [9, 10, 11, 12, 13]
}

[sub_resource type="Animation" id="Animation_0a84a"]
resource_name = "walk"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("SmallMario:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("1_l2c62")]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("SmallMario:hframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("SmallMario:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 2]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cow1y"]
_data = {
"RESET": SubResource("Animation_alwvl"),
"climb": SubResource("Animation_f1xuq"),
"dead": SubResource("Animation_j3p8q"),
"double_jump": SubResource("Animation_skqtu"),
"idle": SubResource("Animation_6mg81"),
"jump": SubResource("Animation_uomvh"),
"skid": SubResource("Animation_xh1se"),
"swim": SubResource("Animation_u0xjn"),
"walk": SubResource("Animation_0a84a")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_vgk2v"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_n5yh4"]
animation = &"walk"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_o6ari"]
animation = &"walk"

[sub_resource type="AnimationNodeBlendSpace1D" id="AnimationNodeBlendSpace1D_2b6sa"]
blend_point_0/node = SubResource("AnimationNodeAnimation_vgk2v")
blend_point_0/pos = 0.0
blend_point_1/node = SubResource("AnimationNodeAnimation_n5yh4")
blend_point_1/pos = 1.0
blend_point_2/node = SubResource("AnimationNodeAnimation_o6ari")
blend_point_2/pos = -1.0
blend_mode = 1

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_65g3m"]
animation = &"double_jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_gl251"]
animation = &"jump"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_krmsn"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l7fa5"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_kcx6n"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_8xcww"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_cl2mi"]
states/Move/node = SubResource("AnimationNodeBlendSpace1D_2b6sa")
states/Move/position = Vector2(476, 100.046)
states/double_jump/node = SubResource("AnimationNodeAnimation_65g3m")
states/double_jump/position = Vector2(669, -18.0204)
states/jump/node = SubResource("AnimationNodeAnimation_gl251")
states/jump/position = Vector2(476.625, -17.9325)
transitions = ["Start", "Move", SubResource("AnimationNodeStateMachineTransition_krmsn"), "Move", "jump", SubResource("AnimationNodeStateMachineTransition_l7fa5"), "jump", "double_jump", SubResource("AnimationNodeStateMachineTransition_kcx6n"), "double_jump", "jump", SubResource("AnimationNodeStateMachineTransition_8xcww")]
graph_offset = Vector2(65.19, -63.0408)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_50ogp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_puqi6"]
size = Vector2(16, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mdnnv"]
size = Vector2(16, 2)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jf4u"]
size = Vector2(16, 2)

[node name="Player" type="CharacterBody2D"]
script = ExtResource("1_3kkn8")

[node name="SmallMario" type="Sprite2D" parent="."]
texture = ExtResource("1_l2c62")
hframes = 14

[node name="CollisionBox" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_6blm8")
debug_color = Color(0.156863, 0.588235, 0.72549, 0.152941)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_cow1y")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_cl2mi")
anim_player = NodePath("../AnimationPlayer")
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_50ogp")
parameters/Move/blend_position = 0

[node name="CharacterStateMachine" parent="." node_paths=PackedStringArray("current_state", "animation_tree") instance=ExtResource("3_gp3jq")]
current_state = NodePath("Ground")
animation_tree = NodePath("../AnimationTree")

[node name="Ground" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("air_state")]
script = ExtResource("4_niits")
air_state = NodePath("../Air")

[node name="Air" type="Node" parent="CharacterStateMachine" node_paths=PackedStringArray("ground_state")]
script = ExtResource("5_a5tc0")
ground_state = NodePath("../Ground")

[node name="StateDebug" type="Label" parent="." node_paths=PackedStringArray("state_machine")]
offset_left = -46.0
offset_top = -35.0
offset_right = 47.0
offset_bottom = -9.0
text = "State:"
script = ExtResource("7_nb2wc")
state_machine = NodePath("../CharacterStateMachine")

[node name="TorsoHitbox" parent="." instance=ExtResource("7_kkc7s")]

[node name="Torso" type="CollisionShape2D" parent="TorsoHitbox"]
shape = SubResource("RectangleShape2D_puqi6")

[node name="FeetHitbox" parent="." instance=ExtResource("7_kkc7s")]

[node name="Feet" type="CollisionShape2D" parent="FeetHitbox"]
position = Vector2(0, 7)
shape = SubResource("RectangleShape2D_mdnnv")
debug_color = Color(0.411765, 0.603922, 0.105882, 0.419608)

[node name="HeadHitbox" parent="." instance=ExtResource("7_kkc7s")]

[node name="Head" type="CollisionShape2D" parent="HeadHitbox"]
position = Vector2(0, -7)
shape = SubResource("RectangleShape2D_0jf4u")
debug_color = Color(0.980392, 0.0666667, 0.32549, 0.419608)

[connection signal="area_entered" from="TorsoHitbox" to="." method="_on_torso_hitbox_area_entered"]
[connection signal="area_entered" from="FeetHitbox" to="." method="_on_feet_hitbox_area_entered"]
[connection signal="area_entered" from="HeadHitbox" to="." method="_on_head_hitbox_area_entered"]
